[metadata]
name = ragelib
description = A helper library for RAGE
long_description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
author = Xenserver
license = BSD-3-Clause
url = https://github.com/perf101/ragelib
project_urls =
    Bug Tracker = https://github.com/perf101/ragelibissues
    Source Code = https://github.com/perf101/ragelib
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: System :: Systems Administration
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
  selenium >= 4.6.0
  bs4
  tqdm
python_requires = >=3.6, <4

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

